Cleaned js, fixed scroll issues, bttbtn works on mobile

--- a/assets/css/_breadcrumbs.sass
+++ b/assets/css/_breadcrumbs.sass
@@ -41,3 +41,7 @@
     padding-bottom: 0
     margin-top: 16px
     font-size: 14px
+    
+    .path-segment
+      font-weight: 600
+      color: #586069!important
