--- a/assets/css/animationoverlay.scss
+++ b/assets/css/animationoverlay.scss
@@ -1,4 +1,5 @@
-#animation-overlay {
+#animations-overlay {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
