--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -43,15 +43,29 @@ body {
   max-width: $mw;
 }
 
-html, body, #sscon {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+html {
+  &.desktop {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    body, 
+    #sscon {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+  }
 }
 
 #sscon.mobile {
@@ -66,13 +80,4 @@ button {
 ::selection,
 ::-moz-selection {
   background-color: $selection-color;
-}
-
-html {
-  &.mobile {
-    width: 100%;
-    height: auto;
-    overflow: auto;
-    position: static;
-  }
 }
